--- a/src/styles.css
+++ b/src/styles.css
@@ -2,11 +2,13 @@
 body {
   background: darkslategrey;
 }
+
 .title {
   text-align: center;
   font-family: "Copperplate Gothic Light";
   font-size: 25px;
 }
+
 .board {
   border-style: solid;
   border-width: 2px;
@@ -16,11 +18,12 @@ body {
   margin: auto;
   background: white;
 }
+
 .black {
   background: gray;
 }
-.figure {
-  padding: 1px;
-  font-size: 35px;
-  font-weight: lighter;
+
+.field {
+  height: 80px;
+  width: 80px;
 }
